--- a/BlogposterCMS/public/assets/scss/pages/_users.scss
+++ b/BlogposterCMS/public/assets/scss/pages/_users.scss
@@ -68,6 +68,7 @@
 }
 
 .users-tab.active {
-  border-bottom: 2px solid currentColor;
+  border-bottom: 2px solid var(--user-color);
+  color: var(--user-color);
   font-weight: bold;
 }
