--- a/BlogposterCMS/public/assets/scss/components/_header-main.scss
+++ b/BlogposterCMS/public/assets/scss/components/_header-main.scss
@@ -7,6 +7,8 @@
   align-items: center;
   padding: 24px 25px;
   background: var(--color-white);
+  justify-content: center;
+
 
   .site-title {
     flex-grow: 1;
