Revert "refactor: merge top header into main header"

--- a/BlogposterCMS/apps/designer/style.scss
+++ b/BlogposterCMS/apps/designer/style.scss
@@ -389,6 +389,7 @@ body.builder-mode .canvas-item-content.builder-themed {
   height: 100%;
 }
 
+body.builder-mode #top-header,
 body.builder-mode #main-header {
   display: none;
 }
