--- a/BlogposterCMS/public/assets/scss/site.scss
+++ b/BlogposterCMS/public/assets/scss/site.scss
@@ -13,6 +13,7 @@
 @import 'responsive';
 @import 'components/sidebar-bubble';
 @import 'components/header-main';
+@import 'components/top-header';
 @import 'components/notification-hub';
 @import 'components/content-header';
 @import 'pages/pages';
