--- a/BlogposterCMS/public/assets/scss/components/_notification-hub.scss
+++ b/BlogposterCMS/public/assets/scss/components/_notification-hub.scss
@@ -5,7 +5,7 @@
 
 .notification-hub {
   position: absolute;
-  top: 56px; // below main-header
+  top: 56px; // below top-header
   right: 16px;
   width: 300px;
   max-height: 50vh;
