--- a/BlogposterCMS/public/plainspace/partials/default-sidebar.html
+++ b/BlogposterCMS/public/plainspace/partials/default-sidebar.html
@@ -1,26 +1,3 @@
 <div class="sidebar">
-  <nav class="sidebar-nav">
-    <a href="/admin/content/" class="sidebar-item">
-      <img src="/assets/icons/layout-dashboard.svg" class="icon" alt="Overview"/>
-      <span class="label">Overview</span>
-    </a>
-    <a href="/admin/content/pages" class="sidebar-item">
-      <img src="/assets/icons/file.svg" class="icon" alt="Pages"/>
-      <span class="label">Pages</span>
-    </a>
-   
-    <a href="/admin/content/menu" class="sidebar-item">
-      <img src="/assets/icons/menu.svg" class="icon" alt="Menus"/>
-      <span class="label">Menu</span>
-    </a>
-    <a href="/admin/content/media" class="sidebar-item">
-      <img src="/assets/icons/image.svg" class="icon" alt="Media"/>
-      <span class="label">Media</span>
-    </a>
-    <a href="/admin/content/widgets" class="sidebar-item">
-      <img src="/assets/icons/layout-grid.svg" class="icon" alt="Widgets"/>
-      <span class="label">Widgets</span>
-    </a>
-    
-  </nav>
+  <nav id="subpage-nav" class="sidebar-nav"></nav>
 </div>
