--- a/BlogposterCMS/public/assets/scss/components/_sidebar-bubble.scss
+++ b/BlogposterCMS/public/assets/scss/components/_sidebar-bubble.scss
@@ -13,13 +13,13 @@
   padding: 20px 16px 0;
   z-index: 10;
 
-  .sidebar-nav {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    .sidebar-nav {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
 
-    .sidebar-item {
+      .sidebar-item {
         position: relative;
         width: 48px;
         height: 48px;
@@ -86,6 +86,10 @@
             background: var(--user-color);
           }
         }
+      }
+
+      .sidebar-add-subpage {
+        margin-top: 8px;
       }
     }
   }
