--- a/BlogposterCMS/public/plainspace/partials/main-header.html
+++ b/BlogposterCMS/public/plainspace/partials/main-header.html
@@ -1,8 +1,8 @@
 <div class="main-header">
-      <nav class="nav-icons">
-        <a href="/admin/home"><img src="/assets/icons/house.svg" class="icon" /> Home</a>
-        <a href="/admin/content"><img src="/assets/icons/file-box.svg" class="icon" /> Content</a>
-        <a href="/admin/settings"><img src="/assets/icons/settings.svg" class="icon" /> Settings</a>
+      <nav id="workspace-nav" class="nav-icons">
+        <a id="workspace-create" title="Create workspace" href="#">
+          <img src="/assets/icons/plus.svg" class="icon" alt="Create workspace" />
+        </a>
       </nav>
   </div>
   
