--- a/BlogposterCMS/public/plainspace/partials/settings-sidebar.html
+++ b/BlogposterCMS/public/plainspace/partials/settings-sidebar.html
@@ -1,25 +1,3 @@
 <div class="sidebar">
-  <nav class="sidebar-nav">
-    <a href="/admin/settings/system" class="sidebar-item">
-      <img src="/assets/icons/server.svg" class="icon" alt="System" />
-      <span class="label">System</span>
-    </a>
-    <a href="/admin/settings/users" class="sidebar-item">
-      <img src="/assets/icons/users.svg" class="icon" alt="Users" />
-      <span class="label">Users</span>
-    </a>
-    <a href="/admin/settings/modules" class="sidebar-item">
-      <img src="/assets/icons/package.svg" class="icon" alt="Modules" />
-      <span class="label">Modules</span>
-    </a>
-    <a href="/admin/settings/login" class="sidebar-item">
-      <img src="/assets/icons/log-in.svg" class="icon" alt="Login" />
-      <span class="label">Login</span>
-    </a>
-    <a href="/admin/settings/fonts" class="sidebar-item">
-      <img src="/assets/icons/type.svg" class="icon" alt="Fonts" />
-      <span class="label">Fonts</span>
-    </a>
-  </nav>
+  <nav id="subpage-nav" class="sidebar-nav"></nav>
 </div>
-  
