--- a/BlogposterCMS/public/assets/scss/components/_header-main.scss
+++ b/BlogposterCMS/public/assets/scss/components/_header-main.scss
@@ -22,6 +22,7 @@
     .nav-icons {
       display: flex;
       gap: 12px;
+      flex: 1;
 
       a {
       display: flex;
@@ -69,7 +70,8 @@
     }
 
     #workspace-create {
-      padding: 10px;
+      margin-left: auto;
+      padding: 10px 14px;
     }
   }
 }
