--- a/BlogposterCMS/public/assets/scss/components/_content-area.scss
+++ b/BlogposterCMS/public/assets/scss/components/_content-area.scss
@@ -27,11 +27,17 @@
   width: 100%;
   min-height: 300px;
   position: relative;
-  background: rgba(255, 255, 255, 0.6);
+  background-color: rgba(255, 255, 255, 0.6);
   backdrop-filter: blur(8px);
   overflow-x: hidden;
   overflow-y: visible;
   height: auto;
+    background-image: radial-gradient(
+    circle at 1px 1px,
+    color-mix(in srgb, var(--user-color), transparent 70%) 1px,
+    transparent 0
+  );
+  background-size: 20px 20px;
 }
 .canvas-item {
   position: absolute;
