Replace widget popup with collapsible widgets panel

--- a/BlogposterCMS/public/assets/scss/site.scss
+++ b/BlogposterCMS/public/assets/scss/site.scss
@@ -36,5 +36,5 @@
 @import 'pages/widgets';
 @import 'pages/news';
 @import 'pages/news-item';
-@import 'components/widget-popup';
+@import 'components/widgets-panel';
 @import 'components/grid-mode';
