--- a/BlogposterCMS/public/plainspace/partials/content-header.html
+++ b/BlogposterCMS/public/plainspace/partials/content-header.html
@@ -1,8 +1,5 @@
 <div class="content-header">
-  <div class="content-header-left" id="content-action-left">
-    <img id="dynamic-action-btn" class="icon" />
-  </div>
-  <div class="content-header-center" id="content-breadcrumb"></div>
+  <div id="content-breadcrumb"></div>
   <div class="content-header-right">
       <img id="edit-toggle" src="/assets/icons/monitor-cog.svg" class="icon" alt="Edit layout" />
   </div>
