feat: single-step workspace panel

--- a/BlogposterCMS/public/assets/scss/site.scss
+++ b/BlogposterCMS/public/assets/scss/site.scss
@@ -16,6 +16,7 @@
 @import 'components/top-header';
 @import 'components/notification-hub';
 @import 'components/content-header';
+@import 'components/slide-panel';
 @import 'pages/pages';
 @import 'pages/media';
 @import 'pages/settings';
