--- a/BlogposterCMS/public/plainspace/partials/main-header.html
+++ b/BlogposterCMS/public/plainspace/partials/main-header.html
@@ -1,8 +1,8 @@
 <div class="main-header">
       <nav id="workspace-nav" class="nav-icons">
-        <a id="workspace-create" title="Create workspace" href="#">
+        <div id="workspace-create" class="nav-button" title="Create workspace">
           <img src="/assets/icons/plus.svg" class="icon" alt="Create workspace" />
-        </a>
+        </div>
       </nav>
   </div>
   
