--- a/BlogposterCMS/public/assets/scss/components/_inline-add.scss
+++ b/BlogposterCMS/public/assets/scss/components/_inline-add.scss
@@ -90,3 +90,11 @@
   height: 20px;
 }
 
+#subpage-floating-field {
+  background: var(--color-white);
+  padding: 8px;
+  border-radius: 8px;
+  box-shadow: var(--shadow-card);
+  box-sizing: border-box;
+}
+
